external-crates/move/crates/move-compiler/tests/move_check/expansion/use_inner_scope_shadows.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 277
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/use_inner_scope_shadows.move:12:5
   │
12 │     spec schema Foo<T> {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'
